# naperian-functors

./: LICENSE  README.md  naperian-functors.cabal
src/Data/: MonoNaperian.hs  Naperian.hs
src/Data/Naperian/: Accelerate.hs  Conversions.hs  Pair.hs  Symbolic.hs  Vector.hs
src/Data/Naperian/Vector/: Unboxed.hs
