name:                naperian-functors
version:             0.1.0.0
synopsis:            Naperian containers
description:
  A library for containers of statically known shape and size.
  .
  Based on
  /Gibbons, J. (2017, April). APLicative programming with Naperian functors. In European Symposium on Programming (pp. 556-583). Springer, Berlin, Heidelberg./
  <https://www.cs.ox.ac.uk/publications/publication10857-abstract.html>.
homepage:            https://github.com/NickHu/naperian-functors#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Hu
maintainer:          nick.hu@cs.ox.ac.uk
copyright:           © Nick Hu 2017
category:            Data, Data Structures, Functors
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag accelerate
  description: Enable accelerate integration
  default: False

flag mononaperian
  description: Monotraversable Naperian functors
  default: False

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Naperian
    Data.Naperian.Vector
    Data.Naperian.Pair
    Data.Naperian.Conversions
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , vector
                     , split
                     , template-haskell
  default-language:    Haskell2010
  if flag(accelerate)
    build-depends: accelerate
    exposed-modules: Data.Naperian.Accelerate
  if flag(mononaperian)
    build-depends: mono-traversable
    exposed-modules:
      Data.MonoNaperian
      Data.Naperian.Vector.Unboxed

source-repository head
  type:     git
  location: https://github.com/NickHu/naperian-functors
